--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="api_key">d6843ab8ee963f5d372296dfff62aed7</string>
 
     <string name="error">Error</string>
+    <string name="enter">Enter</string>
     <string name="no_data">--</string>
 
     <string-array name="cities">
